<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MaterialAndroidBootstrap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="empty"/>

    <string name="url">URL</string>
    <string name="namespaceId">Namespace ID</string>
    <string name="instanceId">Instance ID</string>
    <string name="rssi">RSSI</string>
    <string name="proximity">Proximity</string>
    <string name="distance">Distance</string>
    <string name="no_device">No Eddystone devices detected or matched the filter…</string>

    <string name="bl_not_enabled_title">Bluetooth not enabled</string>
    <string name="bl_not_enabled_message">Please enable bluetooth in settings and restart this application.</string>
    <string name="ble_not_supported_title">Bluetooth LE not available</string>
    <string name="ble_not_supported_message">Sorry, this device does not support Bluetooth LE.</string>
    <string name="grant_location_access_title">This app needs location access</string>
    <string name="grant_location_access_message">Please grant location access so this app can detect beacons in the background.</string>
    <string name="R.string.no_location_access_title">Functionality limited</string>
    <string name="no_location_access_message">Since location access has not been granted, this app will not be able to discover beacons when in the background.</string>
</resources>
